Fix display on iOS so right edge isn't cut off

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -80,6 +80,10 @@
 
 /* General */
 
+html, body {
+    width: 100%;
+}
+
 @media (min-width: 768px) {
     html, body {
         height: 100%;
